Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextNumObjField.quorum
class Main
    Number v
    v:SetValue(5.0)
    action Main
        Test(v)
    end

    action Test(text var)
    end
end
